--- a/GBP_3.html
+++ b/GBP_3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دعوتنامه</title>
+    <title>SURPRISE!</title>
     <style>
         body {
             margin: 0;
@@ -16,7 +16,6 @@
             align-items: center;
             height: 100vh;
             flex-direction: row;
-            cursor: pointer;
         }
 
         .card {
