--- a/GBP_3.html
+++ b/GBP_3.html
@@ -59,13 +59,16 @@
         a {
             color: white;
         }
+        h3 {
+            cursor: pointer;
+        }
     </style>
 </head>
 <img src="https://i.gifer.com/7Uz.gif" />
 <body >
     <div class="card">
         <h1>شما به گودبای پارتی سارا دعوت شده اید!!!</h1>
-        <h4 onclick="playMusic()">جهت شنیدن موسیقی فاخر کلیک کنید.</h4>
+        <h3 onclick="playMusic()">جهت شنیدن موسیقی فاخر کلیک کنید.</h3>
         <br/>
         <p>زمان: پنج شنبه 29 آذر. از ساعت 11 به بعد هر بیاید. از ساعت 4 به بعد راه نمیدیم.</p>
         <p>مکان: ستاری جنوب، پیامبر غربی، بلوار مطهری، کوچه سوم غربی، پلاک 49، واحد 1</p>
