--- a/GBP_3.html
+++ b/GBP_3.html
@@ -14,7 +14,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             flex-direction: row;
         }
 
@@ -66,12 +65,13 @@
         /* Styles for tablets (768px to 1024px) */
         @media (max-width: 1024px) {
             html {
-                padding-top: 5em;
-                padding-bottom: 5em;
+                padding-top: 30px;
+                padding-bottom: 5vh;
             }
             body {
                 /* margin-top: 8vh;
                 margin-bottom: 5vh; */
+                height: auto;
                 flex-direction: column-reverse;
             }
             .card {
@@ -92,7 +92,7 @@
         <h1>شما به گودبای پارتی سارا دعوت شده اید!!!</h1>
         <h3 onclick="playMusic()">جهت شنیدن موسیقی فاخر کلیک کنید.</h3>
         <br/>
-        <p>زمان: پنج شنبه 29 آذر. از ساعت 11 به بعد هر  ساعتی خواستید بیاید. از ساعت 4 به بعد راه نمیدیم.</p>
+        <p>زمان: پنج شنبه 29 آذر. از ساعت 11 به بعد هر بیاید. از ساعت 4 به بعد راه نمیدیم.</p>
         <p>مکان: ستاری جنوب، پیامبر غربی، بلوار مطهری، کوچه سوم غربی، پلاک 49، واحد 1</p>
         <p>هر کی نیاد خونش پا خودش :)</p>
         <a href="GBP_4.html">سوالات پرتکرار</a>
