--- a/GBP_3.html
+++ b/GBP_3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دعوتنامه</title>
+    <title>SURPRISE!</title>
     <style>
         body {
             margin: 0;
@@ -92,7 +92,7 @@
         <h1>شما به گودبای پارتی سارا دعوت شده اید!!!</h1>
         <h3 onclick="playMusic()">جهت شنیدن موسیقی فاخر کلیک کنید.</h3>
         <br/>
-        <p>زمان: پنج شنبه 29 آذر. از ساعت 11 به بعد هر بیاید. از ساعت 4 به بعد راه نمیدیم.</p>
+        <p>زمان: پنج شنبه 29 آذر. از 11 به بعد هر ساعتی بیاید اوکیه ولی از 4 به بعد راه نمیدیم.</p>
         <p>مکان: ستاری جنوب، پیامبر غربی، بلوار مطهری، کوچه سوم غربی، پلاک 49، واحد 1</p>
         <p>هر کی نیاد خونش پا خودش :)</p>
         <a href="GBP_4.html">سوالات پرتکرار</a>
